--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "pg": "^8.16.3",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.16.3"
   },
   "name": "backend",
   "version": "1.0.0",
   "description": "This backend uses [PocketBase](https://pocketbase.io/).",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.11"
   },
