--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "vite preview --port 9911 --host",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
